upgraded to bootstrap5

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Bug's Bookmarks</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?210308">
+    <link rel="stylesheet" href="/static/bootstrap5.min.css">
+    <link rel="stylesheet" href="/static/main5.css?220310">
 
   </head>
 
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="container page-main favs-item">
+    <div class="container page-main mb-5">
       <div class="row">
         <div class="col-md-4">
           <h2>Life</h2>
@@ -83,19 +83,11 @@
           <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
           <p><a target="_blank" href="https://findbiz.nat.gov.tw/fts">商工登記公示資料查詢</a></p>
-          <p><a target="_blank" href="/more/">More...</a></p>
+          <p><a target="_blank" href="/unsorted/">Unsorted Links</a></p>
         </div>
       </div>
-
-      <hr>
-
-      <footer>
-        <p>&nbsp;</p>
-      </footer>
     </div>
 
-    <script src="/static/jquery.min.js"></script>
-    <script src="/static/bootstrap.bundle.min.js"></script>
-    <script src="/static/main.js?210308"></script>
+    <script src="/static/bootstrap5.bundle.min.js"></script>
   </body>
 </html>
