--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="jumbotron jumbotron-main">
+    <div class="jumbotron-main">
       <div class="container">
         <h1>Bug's Bookmarks</h1>
       </div>
