modified unsorted page

--- a/unsorted/index.html
+++ b/unsorted/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="jumbotron jumbotron-vice">
+    <div class="jumbotron-vice">
       <div class="container">
         <h1>Unsorted Links</h1>
       </div>
