--- a/unsorted/index.html
+++ b/unsorted/index.html
@@ -8,8 +8,8 @@
     <title>Unsorted Links</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="stylesheet" href="/static/bootstrap5.min.css">
-    <link rel="stylesheet" href="/static/main5.css?220310">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/main.css?220310">
 
   </head>
 
@@ -100,6 +100,6 @@
       </div>
     </div>
 
-    <script src="/static/bootstrap5.bundle.min.js"></script>
+    <script src="/static/bootstrap.bundle.min.js"></script>
   </body>
 </html>
