--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?220310">
+    <link rel="stylesheet" href="/static/main.css?220512">
 </head>
 <body>
     <div class="jumbotron-main">
@@ -19,68 +19,71 @@
     </div>
     <div class="container page-main mb-5">
         <div class="row">
-            <div class="col-md-4">
-                <h2>Life</h2>
-                <p><a target="_blank" href="http://www.google.com/">Google</a></p>
+            <div class="col-lg-3 col-md-6">
+                <h2>購物,閱讀,電影</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
-                <p><a target="_blank" href="http://www.facebook.com/">Facebook</a></p>
-                <p><a target="_blank" href="http://www.outlook.com/">Outlook</a></p>
-                <p><a target="_blank" href="https://www.linkedin.com/uas/login">LinkedIn</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/?gl=TW&hl=zh-tw">YouTube</a></p>
-                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>News</h2>
-                <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
-                <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
-                <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
-                <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
-                <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
                 <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
                 <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome購物</a></p>
+                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來今日66折</a></p>
+                <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python 新書</a></p>
+                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
-            <div class="col-md-4">
-                <h2>Tech</h2>
+            <div class="col-lg-3 col-md-6">
+                <h2>工作</h2>
+                <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
                 <p><a target="_blank" href="https://github.com/">GitHub</a></p>
                 <p><a target="_blank" href="https://www.heroku.com/">Heroku</a></p>
                 <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
                 <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
                 <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-                <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python 新書</a></p>
-                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來今日66折</a></p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Business</h2>
-                <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
-                <p><a target="_blank" href="https://www.cmoney.tw/finance/">CMoney股市</p>
-                </a>
+            <div class="col-lg-3 col-md-6">
+                <h2>投資理財</h2>
+                <p><a target="_blank" href="https://www.cmoney.tw/finance/">CMoney股市</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
                 <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
                 <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
-            <div class="col-md-4">
-                <h2>English</h2>
+            <div class="col-lg-3 col-md-6">
+                <h2>新聞,知識</h2>
+                <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
+                <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
+                <p><a target="_blank" href="http://pansci.asia/">PanSci泛科學</a></p>
+                <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
+                <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
+                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <h2>YT播放清單</h2>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=awkkyBH2zEo&list=PLNF8K9Ddz0kKfujG6blfAxngYh_C66C_q&index=1">BLACKPINK MV</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=R8QPo5yIT5Q&list=PLaNNx1k0ao1u-x_nKdKNh7cKALzelzXjY&index=1">Learn English with Emma</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=dcOGNwiqjP0&list=PLzMXToX8Kzqggrhr-v0aWQA2g8pzWLBrR&index=1">English with Lucy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo&index=1">Computer Science</a></p>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h2>外語學習</h2>
                 <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo!奇摩字典</a></p>
-                <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
-                <p><a target="_blank" href="https://www.vocabulary.com/">Vocabulary.com</a></p>
+                <p><a target="_blank" href="https://www.quora.com/">Quora</a></p>
                 <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
                 <p><a target="_blank" href="http://learningenglish.voanews.com/">Voice of America</a></p>
-                <p><a target="_blank" href="http://www.netspeak.org/">Netspeak</a></p>
-                <p><a target="_blank" href="http://linggle.com/">Linggle 10^12</a></p>
             </div>
-            <div class="col-md-4">
-                <h2>Miscellaneous</h2>
+            <div class="col-lg-3 col-md-6">
+                <h2>充實學習</h2>
+                <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
                 <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h2>其它</h2>
+                <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
+                <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
                 <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
                 <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
-                <p><a target="_blank" href="https://findbiz.nat.gov.tw/fts">商工登記公示資料查詢</a></p>
-                <p><a target="_blank" href="/unsorted/">Unsorted Links</a></p>
             </div>
         </div>
     </div>
