--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <div class="container page-main mb-5">
         <div class="row">
             <div class="col-lg-3 col-md-6">
-                <h2>購物,閱讀,電影</h2>
+                <h2>生活,購物,閱讀</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
+                <p><a target="_blank" href="https://www.facebook.com/">Facebook</a></p>
                 <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
                 <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome購物</a></p>
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來今日66折</a></p>
@@ -36,6 +37,7 @@
                 <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
                 <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
                 <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
+                <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>投資理財</h2>
@@ -44,6 +46,7 @@
                 <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
                 <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
+                <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -54,34 +57,35 @@
                 <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
+                <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo!奇摩字典</a></p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-6">
-                <h2>YT播放清單</h2>
+                <h2>YT女神韓團</h2>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=awkkyBH2zEo&list=PLNF8K9Ddz0kKfujG6blfAxngYh_C66C_q&index=1">BLACKPINK MV</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=WPdWvnAAurg">aespa - Savage</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=--FmExEAsM8">IVE - ELEVEN</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=n0j5NPptyM0">Kep1er - WA DA DA</a></p>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h2>YT英語</h2>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=g9m7ezjEsMA&list=PL41R2vH_CL42mcmegHYYDPYjc-UvsMwuV&index=1">Learn English Conversation</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=R8QPo5yIT5Q&list=PLaNNx1k0ao1u-x_nKdKNh7cKALzelzXjY&index=1">Learn English with Emma</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=dcOGNwiqjP0&list=PLzMXToX8Kzqggrhr-v0aWQA2g8pzWLBrR&index=1">English with Lucy</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo&index=1">Computer Science</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <h2>外語學習</h2>
-                <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo!奇摩字典</a></p>
+                <h2>充實學習</h2>
                 <p><a target="_blank" href="https://www.quora.com/">Quora</a></p>
                 <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
-                <p><a target="_blank" href="http://learningenglish.voanews.com/">Voice of America</a></p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h2>充實學習</h2>
-                <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
-                <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>其它</h2>
+                <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
                 <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
-                <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
                 <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
                 <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
             </div>
