--- a/porn/index.html
+++ b/porn/index.html
@@ -23,7 +23,20 @@
     <div class="container page-main mb-5">
       <div class="row">
         <div class="col-lg-3 col-md-6">
-          <h2>Pornhub</h2>
+          <h2>Channels</h2>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/brazzers">Brazzers</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/bratty-sis">Bratty Sis</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/property-sex">Property Sex</a></p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <h2>Pornstar</h2>
+
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/melody-marks">Melody Marks</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/pornstar/scarlett-jones">Scarlett Jones</a></p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <h2>Model</h2>
+          <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">MollyRedWolf</a></p>
         </div>
       </div>
     </div>
