--- a/porn/index.html
+++ b/porn/index.html
@@ -27,6 +27,7 @@
           <p><a target="_blank" href="https://www.pornhub.com/channels/brazzers">Brazzers</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/bratty-sis">Bratty Sis</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/channels/property-sex">Property Sex</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/channels/ours-hd-tv">Ours HD TV</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Pornstar</h2>
@@ -39,6 +40,11 @@
         <div class="col-lg-3 col-md-6">
           <h2>Model</h2>
           <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">MollyRedWolf</a></p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <h2>日本女優</h2>
+          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=miku+ohashi">大橋未久</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=yui+hatano">波多野結衣</a></p>
         </div>
       </div>
     </div>
