--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="container page-main mb-5">
         <div class="row">
             <div class="col-lg-3 col-md-6">
-                <h2>生活,購物,閱讀</h2>
+                <h2>生活與購物</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/">Facebook</a></p>
-                <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
-                <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
-                <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome購物</a></p>
-                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來今日66折</a></p>
-                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
+                <p><a target="_blank" href="https://manager.line.biz/">LINE.Biz</a></p>
+                <p><a target="_blank" href="https://tw.buy.yahoo.com/">Buy.Yahoo!</a></p>
+                <p><a target="_blank" href="https://24h.pchome.com.tw/index/">24h.PChome</a></p>
+                <p><a target="_blank" href="https://activity.books.com.tw/books66/">Books66</a></p>
+                <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/">u-movie</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>工作</h2>
@@ -37,7 +37,7 @@
                 <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
                 <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
                 <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
-                <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python 新書</a></p>
+                <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>投資理財</h2>
@@ -45,24 +45,24 @@
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
                 <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
                 <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
-                <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
+                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel</a></p>
                 <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <h2>新聞,知識</h2>
+                <h2>新聞與知識</h2>
                 <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
                 <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
                 <p><a target="_blank" href="http://pansci.asia/">PanSci泛科學</a></p>
                 <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
-                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
-                <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo!奇摩字典</a></p>
+                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">algo</a></p>
+                <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Dict.Yahoo!</a></p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-6">
-                <h2>YT女神韓團</h2>
+                <h2>YT韓團</h2>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=awkkyBH2zEo&list=PLNF8K9Ddz0kKfujG6blfAxngYh_C66C_q&index=1">BLACKPINK MV</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=WPdWvnAAurg">aespa - Savage</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=--FmExEAsM8">IVE - ELEVEN</a></p>
