--- a/porn/index.html
+++ b/porn/index.html
@@ -42,9 +42,9 @@
           <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">MollyRedWolf</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
-          <h2>日本女優</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=miku+ohashi">大橋未久</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=yui+hatano">波多野結衣</a></p>
+          <h2>Japanese</h2>
+          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=miku+ohashi">Miku Ohashi</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/video/search?search=yui+hatano">Yui Hatano</a></p>
         </div>
       </div>
     </div>
