--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p><a target="_blank" href="https://tw.buy.yahoo.com/">Buy.Yahoo!</a></p>
                 <p><a target="_blank" href="https://24h.pchome.com.tw/index/">24h.PChome</a></p>
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">Books66</a></p>
-                <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/">u-movie</a></p>
+                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">Movies</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>工作</h2>
