--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                 <h2>投資理財</h2>
                 <p><a target="_blank" href="https://www.cmoney.tw/finance/">CMoney股市</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
-                <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
-                <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
+                <p><a target="_blank" href="https://www.moneydj.com/">MoneyDJ</a></p>
+                <p><a target="_blank" href="https://www.stockq.org/">StockQ</a></p>
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel</a></p>
                 <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>新聞與知識</h2>
-                <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
+                <p><a target="_blank" href="https://www.bnext.com.tw/">數位時代</a></p>
                 <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
-                <p><a target="_blank" href="http://pansci.asia/">PanSci泛科學</a></p>
+                <p><a target="_blank" href="https://pansci.asia/">PanSci泛科學</a></p>
                 <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">algo</a></p>
@@ -78,16 +78,16 @@
             <div class="col-lg-3 col-md-6">
                 <h2>充實學習</h2>
                 <p><a target="_blank" href="https://www.quora.com/">Quora</a></p>
-                <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
+                <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
-                <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
+                <p><a target="_blank" href="https://www.learnmode.net/home/">LearnMode學習吧</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
                 <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
                 <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
-                <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
+                <p><a target="_blank" href="https://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
             </div>
         </div>
     </div>
