modified home page

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/">Facebook</a></p>
                 <p><a target="_blank" href="https://manager.line.biz/">LINE.Biz</a></p>
-                <p><a target="_blank" href="https://tw.buy.yahoo.com/">Buy.Yahoo!</a></p>
-                <p><a target="_blank" href="https://24h.pchome.com.tw/index/">24h.PChome</a></p>
-                <p><a target="_blank" href="https://activity.books.com.tw/books66/">Books66</a></p>
+                <p><a target="_blank" href="https://tw.buy.yahoo.com/">Yahoo!購物</a></p>
+                <p><a target="_blank" href="https://24h.pchome.com.tw/index/">PChome購物</a></p>
+                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
                 <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">Movies</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -44,20 +44,20 @@
                 <p><a target="_blank" href="https://www.cmoney.tw/finance/">CMoney股市</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
                 <p><a target="_blank" href="https://www.moneydj.com/">MoneyDJ</a></p>
-                <p><a target="_blank" href="https://www.stockq.org/">StockQ</a></p>
-                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel</a></p>
+                <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p>
+                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel股感</a></p>
                 <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>新聞與知識</h2>
                 <p><a target="_blank" href="https://www.bnext.com.tw/">數位時代</a></p>
+                <p><a target="_blank" href="https://buzzorange.com/techorange/">科技報橘</a></p>
                 <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
+                <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
                 <p><a target="_blank" href="https://pansci.asia/">PanSci泛科學</a></p>
-                <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
-                <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
-                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">algo</a></p>
-                <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Dict.Yahoo!</a></p>
+                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
+                <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo!字典</a></p>
             </div>
         </div>
         <div class="row">
