--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <h2>生活與購物</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/">Facebook</a></p>
-                <p><a target="_blank" href="https://manager.line.biz/">LINE.Biz</a></p>
+                <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
                 <p><a target="_blank" href="https://tw.buy.yahoo.com/">Yahoo!購物</a></p>
                 <p><a target="_blank" href="https://24h.pchome.com.tw/index/">PChome購物</a></p>
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
-                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">Movies</a></p>
+                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>工作</h2>
@@ -77,7 +77,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>充實學習</h2>
-                <p><a target="_blank" href="https://www.learnmode.net/home/">LearnMode學習吧</a></p>
+                <p><a target="_blank" href="https://www.learnmode.net/home/">學習吧</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.elllo.org/">ELLLO</a></p>
                 <p><a target="_blank" href="https://www.quora.com/">Quora</a></p>
