modified home page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p><a target="_blank" href="https://www.bnext.com.tw/">數位時代</a></p>
                 <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
-                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
+                <p><a target="_blank" href="https://www.bilibili.com/video/BV1ex411x7Em?p=1">Python從入門到精通</a></p>
                 <p><a target="_blank" href="https://www.bilibili.com/video/BV1et411b73Z?p=1">C++教程</a></p>
                 <p><a target="_blank" href="https://www.bilibili.com/video/BV1nJ411V7bd?p=1">數據結構與算法基礎</a></p>
                 <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo!字典</a></p>
