--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <h2>YT韓團</h2>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=awkkyBH2zEo&list=PLNF8K9Ddz0kKfujG6blfAxngYh_C66C_q&index=1">BLACKPINK MV</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=bwmSjveL3Lc">BLACKPINK - BOOMBAYAH</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=WPdWvnAAurg">aespa - Savage</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=--FmExEAsM8">IVE - ELEVEN</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=n0j5NPptyM0">Kep1er - WA DA DA</a></p>
