--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <h2>YT韓團</h2>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=bwmSjveL3Lc">BLACKPINK - BOOMBAYAH</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=WPdWvnAAurg">aespa - Savage</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=--FmExEAsM8">IVE - ELEVEN</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=n0j5NPptyM0">Kep1er - WA DA DA</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=POe9SOEKotk">BLACKPINK</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=dYRITmpFbJ4">aespa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=F0B7HDiY-10">IVE</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=w8N3nZ7reZk">Kep1er</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=Jh4QFaPmdss">(G)I-DLE</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h2>YT英語</h2>
