Add home link to misc and porn

--- a/misc/index.html
+++ b/misc/index.html
@@ -17,6 +17,7 @@
     <div class="jumbotron-misc">
       <div class="container">
         <h1>Misc Bookmarks</h1>
+        <a class="btn btn-light" href="/">Home</a>
       </div>
     </div>
 
