--- a/porn/index.html
+++ b/porn/index.html
@@ -17,6 +17,7 @@
     <div class="jumbotron-porn">
       <div class="container">
         <h1>Porn Bookmarks</h1>
+        <a class="btn btn-light" href="/">Home</a>
       </div>
     </div>
 
