--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p><a target="_blank" href="https://www.bilibili.com/video/BV1ex411x7Em?p=1">Python從入門到精通</a></p>
                 <p><a target="_blank" href="https://www.bilibili.com/video/BV1tt4y1L7yH?p=1">LeetCode算法刷題</a></p>
                 <p><a target="_blank" href="https://www.bilibili.com/video/BV1nJ411V7bd?p=1">數據結構與算法基礎</a></p>
-                <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo!字典</a></p>
+                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/2672">動態規劃</a></p>
             </div>
         </div>
         <div class="row">
