Modify index page

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <p><a target="_blank" href="https://www.bnext.com.tw/">數位時代</a></p>
                 <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
-                <p><a target="_blank" href="https://www.bilibili.com/video/BV1ex411x7Em?p=1">Python從入門到精通</a></p>
-                <p><a target="_blank" href="https://www.bilibili.com/video/BV1tt4y1L7yH?p=1">LeetCode算法刷題</a></p>
-                <p><a target="_blank" href="https://www.bilibili.com/video/BV1nJ411V7bd?p=1">數據結構與算法基礎</a></p>
-                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/2672">動態規劃</a></p>
+                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/5681">試競程</a></p>
+                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20119871/ironman/2210">從 LeetCode 學演算法</a></p>
+                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20113462/ironman/2977">放膽面對 LeetCode</a></p>
+                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/2672">動態規劃百題</a></p>
             </div>
         </div>
         <div class="row">
