--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <h2>新聞與知識</h2>
+                <h2>知識與技能</h2>
                 <p><a target="_blank" href="https://www.bnext.com.tw/">數位時代</a></p>
                 <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT邦幫忙</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab財經實驗室</a></p>
-                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/5681">試競程</a></p>
-                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20119871/ironman/2210">從 LeetCode 學演算法</a></p>
-                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20113462/ironman/2977">放膽面對 LeetCode</a></p>
-                <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/2672">動態規劃百題</a></p>
+                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
+                <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
+                <p><a target="_blank" href="https://codingcompetitions.withgoogle.com/">G Coding Competitions</a></p>
+                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Hacker Cup</a></p>
             </div>
         </div>
         <div class="row">
