--- a/misc/index.html
+++ b/misc/index.html
@@ -53,6 +53,10 @@
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20121027/ironman/4552">資料結構與演算法</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20103434/ironman/1225">資料安全與簡單加密</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20120178/ironman/2654">LINE BOT</a></p>
+          <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/5681">試競程</a></p>
+          <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20119871/ironman/2210">從 LeetCode 學演算法</a></p>
+          <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20113462/ironman/2977">放膽面對 LeetCode</a></p>
+          <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20112376/ironman/2672">動態規劃百題</a></p>
         </div>
       </div>
 
